FE2-20: Dropdown style z-index fix.

--- a/docroot/modules/custom/foia_annual_data_report/css/form-display-dropdown.css
+++ b/docroot/modules/custom/foia_annual_data_report/css/form-display-dropdown.css
@@ -53,7 +53,8 @@
   visibility: visible;
 }
 #block-seven-secondary-local-tasks ul.secondary:hover li.is-active {
-  position: unset;
+  position: relative;
+  top: 0;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   background-color: #fff;
